--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,129 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/dedication.xhtml">Dedication</a>
+				</li>
+				<li>
+					<a href="text/preface.xhtml">Preface to the American Edition</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">Festus</a>
+					<ol>
+						<li>
+							<a href="text/proem.xhtml">Proem</a>
+						</li>
+						<li>
+							<a href="text/scene-1.xhtml" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/scene-2.xhtml" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/scene-3.xhtml" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/scene-4.xhtml" epub:type="z3998:roman">IV</a>
+						</li>
+						<li>
+							<a href="text/scene-5.xhtml" epub:type="z3998:roman">V</a>
+						</li>
+						<li>
+							<a href="text/scene-6.xhtml" epub:type="z3998:roman">VI</a>
+						</li>
+						<li>
+							<a href="text/scene-7.xhtml" epub:type="z3998:roman">VII</a>
+						</li>
+						<li>
+							<a href="text/scene-8.xhtml" epub:type="z3998:roman">VIII</a>
+						</li>
+						<li>
+							<a href="text/scene-9.xhtml" epub:type="z3998:roman">IX</a>
+						</li>
+						<li>
+							<a href="text/scene-10.xhtml" epub:type="z3998:roman">X</a>
+						</li>
+						<li>
+							<a href="text/scene-11.xhtml" epub:type="z3998:roman">XI</a>
+						</li>
+						<li>
+							<a href="text/scene-12.xhtml" epub:type="z3998:roman">XII</a>
+						</li>
+						<li>
+							<a href="text/scene-13.xhtml" epub:type="z3998:roman">XIII</a>
+						</li>
+						<li>
+							<a href="text/scene-14.xhtml" epub:type="z3998:roman">XIV</a>
+						</li>
+						<li>
+							<a href="text/scene-15.xhtml" epub:type="z3998:roman">XV</a>
+						</li>
+						<li>
+							<a href="text/scene-16.xhtml" epub:type="z3998:roman">XVI</a>
+						</li>
+						<li>
+							<a href="text/scene-17.xhtml" epub:type="z3998:roman">XVII</a>
+						</li>
+						<li>
+							<a href="text/scene-18.xhtml" epub:type="z3998:roman">XVIII</a>
+						</li>
+						<li>
+							<a href="text/scene-19.xhtml" epub:type="z3998:roman">XIX</a>
+						</li>
+						<li>
+							<a href="text/scene-20.xhtml" epub:type="z3998:roman">XX</a>
+						</li>
+						<li>
+							<a href="text/scene-21.xhtml" epub:type="z3998:roman">XXI</a>
+						</li>
+						<li>
+							<a href="text/scene-22.xhtml" epub:type="z3998:roman">XXII</a>
+						</li>
+						<li>
+							<a href="text/scene-23.xhtml" epub:type="z3998:roman">XXIII</a>
+						</li>
+						<li>
+							<a href="text/scene-24.xhtml" epub:type="z3998:roman">XXIV</a>
+						</li>
+						<li>
+							<a href="text/scene-25.xhtml" epub:type="z3998:roman">XXV</a>
+						</li>
+						<li>
+							<a href="text/scene-26.xhtml" epub:type="z3998:roman">XXVI</a>
+						</li>
+						<li>
+							<a href="text/scene-27.xhtml" epub:type="z3998:roman">XXVII</a>
+						</li>
+						<li>
+							<a href="text/scene-28.xhtml" epub:type="z3998:roman">XXVIII</a>
+						</li>
+						<li>
+							<a href="text/scene-29.xhtml" epub:type="z3998:roman">XXIX</a>
+						</li>
+						<li>
+							<a href="text/scene-30.xhtml" epub:type="z3998:roman">XXX</a>
+						</li>
+						<li>
+							<a href="text/scene-31.xhtml" epub:type="z3998:roman">XXXI</a>
+						</li>
+						<li>
+							<a href="text/scene-32.xhtml" epub:type="z3998:roman">XXXII</a>
+						</li>
+						<li>
+							<a href="text/scene-33.xhtml" epub:type="z3998:roman">XXXIII</a>
+						</li>
+						<li>
+							<a href="text/scene-34.xhtml" epub:type="z3998:roman">XXXIV</a>
+						</li>
+						<li>
+							<a href="text/scene-35.xhtml" epub:type="z3998:roman">XXXV</a>
+						</li>
+						<li>
+							<a href="text/scene-36.xhtml" epub:type="z3998:roman">XXXVI</a>
+						</li>
+						<li>
+							<a href="text/envoi.xhtml">L’Envoi</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,19 +150,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
+					<a href="text/scene-1.xhtml" epub:type="bodymatter">Festus</a>
 				</li>
 			</ol>
 		</nav>
