--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -11,23 +11,19 @@
 				<h2 epub:type="title">Colophon</h2>
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
-			<p><i epub:type="se:name.publication.book">Festus</i><br/>
-			was published in YEAR by<br/>
+			<p><i epub:type="se:name.publication.poem">Festus</i><br/>
+			was published in 1839 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Philip_James_Bailey">Philip James Bailey</a>.</p>
-			<p>This ebook was produced for<br/>
+			<p>This ebook was transcribed and produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
-			and is based on a transcription produced in PG_YEAR by<br/>
-			<b epub:type="z3998:personal-name">TRANSCRIBER_1</b>, <b epub:type="z3998:personal-name">TRANSCRIBER_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
-			for<br/>
-			<a href="PG_URL">Project Gutenberg</a><br/>
-			and on digital scans from the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			<a href="https://www.linkedin.com/in/emma-sweeney-554927190/">Emma Sweeney</a>,<br/>
+			and is based on digital scans from<br/>
+			<a href="https://standardebooks.org/ebooks/philip-james-bailey/festus#page-scans">various sources</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="COVER_ARTIST_WIKI_URL">COVER_ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Lucifer</i>,<br/>
+			a painting completed in 1890 by<br/>
+			<a href="https://en.wikipedia.org/wiki/Franz_Stuck">Franz Stuck</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
