--- a/src/epub/text/scene-12.xhtml
+++ b/src/epub/text/scene-12.xhtml
@@ -308,7 +308,7 @@
 					<tr>
 						<td/>
 						<td>
-							<i epub:type="z3998:stage-direction">Soldiers pass; music, etc.</i>
+							<i epub:type="z3998:stage-direction">Soldiers pass; music, <abbr>etc.</abbr></i>
 						</td>
 					</tr>
 					<tr>
@@ -619,7 +619,7 @@
 								<br/>
 								<span>Believe me ever thine affectionate</span>
 								<br/>
-								<span>Lucifer. P.S. Sweet, remember me!</span>
+								<span>Lucifer. <abbr epub:type="z3998:initialism">P.S.</abbr> Sweet, remember me!</span>
 							</p>
 						</td>
 					</tr>
