--- a/src/epub/text/scene-9.xhtml
+++ b/src/epub/text/scene-9.xhtml
@@ -676,7 +676,7 @@
 									<br/>
 									<span class="i1">Through the lee-lang simmer day.</span>
 									<br/>
-									<span class="i2">Oh! the wee green neuk, etc.</span>
+									<span class="i2">Oh! the wee green neuk, <abbr>etc.</abbr></span>
 								</p>
 								<p>
 									<span>And whare a’ things luik as though they lo’ed</span>
@@ -695,7 +695,7 @@
 									<br/>
 									<span class="i1">But ye mauna luik sae at me.</span>
 									<br/>
-									<span class="i2">Oh! the wee green neuk, etc.</span>
+									<span class="i2">Oh! the wee green neuk, <abbr>etc.</abbr></span>
 								</p>
 								<p>
 									<span>Whare the lang rank bent is saft and cule,</span>
@@ -714,7 +714,7 @@
 									<br/>
 									<span class="i1">Let ’em blush till they drap, for me!</span>
 									<br/>
-									<span class="i2">Oh! the wee green neuk, etc.</span>
+									<span class="i2">Oh! the wee green neuk, <abbr>etc.</abbr></span>
 								</p>
 							</blockquote>
 						</td>
@@ -2451,7 +2451,7 @@
 								<br/>
 								<span>The things beneath it, which it lights to death.</span>
 								<br/>
-								<span>Well, farewell, Mr. Student. May you never</span>
+								<span>Well, farewell, <abbr>Mr.</abbr> Student. May you never</span>
 								<br/>
 								<span>Regret those hours which make the mind, if they</span>
 								<br/>
