[Editorial] Modernize some spelling

--- a/src/epub/text/proem.xhtml
+++ b/src/epub/text/proem.xhtml
@@ -48,7 +48,7 @@
 				<br/>
 				<span>Done unto God. So may they ever be!</span>
 				<br/>
-				<span>It shews the strength of wish we have to be great,</span>
+				<span>It shows the strength of wish we have to be great,</span>
 				<br/>
 				<span>And the sublime humility of might.</span>
 			</p>
