--- a/src/epub/text/scene-1.xhtml
+++ b/src/epub/text/scene-1.xhtml
@@ -88,7 +88,7 @@
 									<br/>
 									<span>Is all confined</span>
 									<br/>
-									<span>To shew Thee, God, most High!</span>
+									<span>To show Thee, God, most High!</span>
 									<br/>
 									<span>The sun still burns,</span>
 									<br/>
