--- a/src/epub/text/scene-12.xhtml
+++ b/src/epub/text/scene-12.xhtml
@@ -438,7 +438,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td epub:type="z3998:persona">Passer-by</td>
+						<td epub:type="z3998:persona">Passerby</td>
 						<td epub:type="z3998:verse">
 							<p>
 								<span>The news are good news, being none at all.</span>
@@ -761,7 +761,7 @@
 							<p>
 								<span>I shall be</span>
 								<br/>
-								<span>Most happy; only shew me how.</span>
+								<span>Most happy; only show me how.</span>
 							</p>
 						</td>
 					</tr>
