--- a/src/epub/text/scene-14.xhtml
+++ b/src/epub/text/scene-14.xhtml
@@ -213,7 +213,7 @@
 								<br/>
 								<span>All things to live with, nothing to live for;⁠—</span>
 								<br/>
-								<span>The Moslem’s bowers of love, and streams of wine,</span>
+								<span>The Muslim’s bowers of love, and streams of wine,</span>
 								<br/>
 								<span>And palaces of purest adamant,</span>
 								<br/>
@@ -383,7 +383,7 @@
 								<br/>
 								<span>Weak with the work of thought, a boyish bard,</span>
 								<br/>
-								<span>Sate suing night and stars for his reward.</span>
+								<span>Sat suing night and stars for his reward.</span>
 								<br/>
 								<span>The sunbeam swerved and grew, a breathing, dim,</span>
 								<br/>
@@ -417,7 +417,7 @@
 								<br/>
 								<span>Shall make her bosom to grow great with light.</span>
 								<br/>
-								<span>Still he sate, though his lamp sunk; and he strained</span>
+								<span>Still he sat, though his lamp sunk; and he strained</span>
 								<br/>
 								<span>His eyes to work the nightness which remained.</span>
 								<br/>
@@ -451,7 +451,7 @@
 								<br/>
 								<span>And were there suns in day as stars in night,</span>
 								<br/>
-								<span>They would shew but like one ray from out His full-sphered light;</span>
+								<span>They would show but like one ray from out His full-sphered light;</span>
 								<br/>
 								<span>As but one momentary gleam would fly;</span>
 								<br/>
@@ -753,7 +753,7 @@
 						<td epub:type="z3998:persona">Festus</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>Oh! shew me that sweet soul</span>
+								<span>Oh! show me that sweet soul</span>
 								<br/>
 								<span>Thou brought’st to me the first night that we met.</span>
 								<br/>
@@ -971,7 +971,7 @@
 								<br/>
 								<span>Here, too, some pluck the branch of peace wherewith</span>
 								<br/>
-								<span>To greet a suffering saint, and shew his flood</span>
+								<span>To greet a suffering saint, and show his flood</span>
 								<br/>
 								<span>Of woe hath sunken: this I love to do.</span>
 								<br/>
