--- a/src/epub/text/scene-15.xhtml
+++ b/src/epub/text/scene-15.xhtml
@@ -2423,7 +2423,7 @@
 							<p>
 								<span>They who mourn the lack of wit,</span>
 								<br/>
-								<span>Shew, at least, no more of it.</span>
+								<span>Show, at least, no more of it.</span>
 							</p>
 						</td>
 					</tr>
