--- a/src/epub/text/scene-16.xhtml
+++ b/src/epub/text/scene-16.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction z3998:drama">
 		<section id="scene-16" epub:type="chapter z3998:scene">
 			<h2 epub:type="ordinal z3998:roman">XVI</h2>
-			<p>Scene⁠—A church-yard.</p>
+			<p>Scene⁠—A churchyard.</p>
 			<table>
 				<tbody>
 					<tr>
