--- a/src/epub/text/scene-18.xhtml
+++ b/src/epub/text/scene-18.xhtml
@@ -65,7 +65,7 @@
 						<td epub:type="z3998:persona">Lucifer</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>Shew him God.</span>
+								<span>Show him God.</span>
 							</p>
 						</td>
 					</tr>
@@ -257,7 +257,7 @@
 								<br/>
 								<span>For the instant, then thine eye had been thy death.</span>
 								<br/>
-								<span>Come, I will shew thee Heaven and all angels.</span>
+								<span>Come, I will show thee Heaven and all angels.</span>
 								<br/>
 								<span>Lo! the recording angel.</span>
 							</p>
@@ -371,7 +371,7 @@
 								<br/>
 								<span>Of spirits blest! in their divinest eyes</span>
 								<br/>
-								<span>The spirit speaks, and shews that in their own</span>
+								<span>The spirit speaks, and shows that in their own</span>
 								<br/>
 								<span>All doubt and want hath ceased, as death hath ceased.</span>
 								<br/>
@@ -561,7 +561,7 @@
 						<td epub:type="z3998:persona">Angel</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>The goodness of the heart is shewn in deeds</span>
+								<span>The goodness of the heart is shown in deeds</span>
 								<br/>
 								<span>Of peacefulness and kindness. Hand and heart</span>
 								<br/>
@@ -571,7 +571,7 @@
 								<br/>
 								<span>Nor vital essence; and content in sin</span>
 								<br/>
-								<span>Shews apathy, not satisfied control.</span>
+								<span>Shows apathy, not satisfied control.</span>
 								<br/>
 								<span>Do my words trouble thee? Then treasure them.</span>
 								<br/>
@@ -803,7 +803,7 @@
 							<p>
 								<span>And his, thy son’s, He will raise. Since with me,</span>
 								<br/>
-								<span>I have shewn him infinite wonders: we have oped</span>
+								<span>I have shown him infinite wonders: we have oped</span>
 								<br/>
 								<span>And scanned the golden scroll of Fate, wherein</span>
 								<br/>
