--- a/src/epub/text/scene-19.xhtml
+++ b/src/epub/text/scene-19.xhtml
@@ -197,7 +197,7 @@
 						<td epub:type="z3998:persona">Helen</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>Shew me.</span>
+								<span>Show me.</span>
 							</p>
 						</td>
 					</tr>
@@ -221,7 +221,7 @@
 							<p>
 								<span>Why, what could it be?</span>
 								<br/>
-								<span>Jewels are bawbles only; whether pearls</span>
+								<span>Jewels are baubles only; whether pearls</span>
 								<br/>
 								<span>From the sea’s lightless depths, or diamonds</span>
 								<br/>
@@ -381,7 +381,7 @@
 								<br/>
 								<span>Thereof prophetically, and have been⁠—</span>
 								<br/>
-								<span>What I will shew thee presently, when I</span>
+								<span>What I will show thee presently, when I</span>
 								<br/>
 								<span>Relate the story of the angel who</span>
 								<br/>
@@ -563,7 +563,7 @@
 								<br/>
 								<span>Nature than others, Beauty’s proper sex,</span>
 								<br/>
-								<span>Shewn but by softer qualities of soul,</span>
+								<span>Shown but by softer qualities of soul,</span>
 								<br/>
 								<span>More lovable than awful, more devote</span>
 								<br/>
@@ -599,7 +599,7 @@
 								<br/>
 								<span>While each doth God’s great will alike, and both</span>
 								<br/>
-								<span>With their whole nature’s fulness love His works.</span>
+								<span>With their whole nature’s fullness love His works.</span>
 								<br/>
 								<span>To love them lifts the soul to Heaven.</span>
 							</p>
@@ -993,7 +993,7 @@
 								<br/>
 								<span>With mortal and material. Thus of God,</span>
 								<br/>
-								<span>He shewed, as the three primal rays make one</span>
+								<span>He showed, as the three primal rays make one</span>
 								<br/>
 								<span>Sole beam of Light, so the three Persons make</span>
 								<br/>
@@ -1532,7 +1532,7 @@
 								<br/>
 								<span>Part with them for the treasures of all worlds.</span>
 								<br/>
-								<span>How shew my thanks?</span>
+								<span>How show my thanks?</span>
 							</p>
 						</td>
 					</tr>
