--- a/src/epub/text/scene-2.xhtml
+++ b/src/epub/text/scene-2.xhtml
@@ -29,7 +29,7 @@
 								<br/>
 								<span>Meet, mix and deepen. All things unto me</span>
 								<br/>
-								<span>Shew their dark sides! somewhere there must be light.</span>
+								<span>Show their dark sides! somewhere there must be light.</span>
 								<br/>
 								<span>Oh! I feel like a seed in the cold earth;</span>
 								<br/>
@@ -340,7 +340,7 @@
 						<td epub:type="z3998:persona">Lucifer</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>And now thou kneel’st to Heaven. Fye, graceless boy!</span>
+								<span>And now thou kneel’st to Heaven. Fie, graceless boy!</span>
 								<br/>
 								<span>Mocking thy Maker with a cast-off prayer;</span>
 								<br/>
