--- a/src/epub/text/scene-20.xhtml
+++ b/src/epub/text/scene-20.xhtml
@@ -417,7 +417,7 @@
 								<br/>
 								<span>He keeps his word relentlessly. With not</span>
 								<br/>
-								<span>More pride an Indian shews his foeman’s scalp</span>
+								<span>More pride an Indian shows his foeman’s scalp</span>
 								<br/>
 								<span>Than he his watch for punctuality.</span>
 							</p>
@@ -1431,7 +1431,7 @@
 								<br/>
 								<span>The golden pane the setting sun doth just</span>
 								<br/>
-								<span>Imblaze; which shews, till Heaven comes down again,</span>
+								<span>Imblaze; which shows, till Heaven comes down again,</span>
 								<br/>
 								<span>All other lights but grades of gloom; her dark,</span>
 								<br/>
@@ -1513,7 +1513,7 @@
 								<br/>
 								<span>All things talked thoughts to him. The sea went mad,</span>
 								<br/>
-								<span>And the wind whined as ’twere in pain, to shew</span>
+								<span>And the wind whined as ’twere in pain, to show</span>
 								<br/>
 								<span>Each one his meaning; and the awful sun</span>
 								<br/>
@@ -2015,7 +2015,7 @@
 						<td epub:type="z3998:persona">Festus</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>Think then God shews his face to us no less</span>
+								<span>Think then God shows his face to us no less</span>
 								<br/>
 								<span>In spiritual darkness than in light.</span>
 							</p>
@@ -2379,7 +2379,7 @@
 								<br/>
 								<span>Within us, till we fear our heart, lest it,</span>
 								<br/>
-								<span>Magician-like, shew more than we can bear.</span>
+								<span>Magician-like, show more than we can bear.</span>
 								<br/>
 								<span>Nor was he fameless; but obscurity</span>
 								<br/>
@@ -2561,7 +2561,7 @@
 								<br/>
 								<span>The foredoom of all things, spirit and matter,</span>
 								<br/>
-								<span>Is shewn, and the permission of temptation;</span>
+								<span>Is shown, and the permission of temptation;</span>
 								<br/>
 								<span>The angelic worship of the Trinity,</span>
 								<br/>
@@ -3447,7 +3447,7 @@
 								<br/>
 								<span>Endeavour, vanquished⁠—by Almighty good.</span>
 								<br/>
-								<span>The last scene shews the final doom of earth,</span>
+								<span>The last scene shows the final doom of earth,</span>
 								<br/>
 								<span>Soul’s judgment, and salvation of the youth,</span>
 								<br/>
