--- a/src/epub/text/scene-24.xhtml
+++ b/src/epub/text/scene-24.xhtml
@@ -521,7 +521,7 @@
 								<br/>
 								<span>So guide us, God! in all our works and ways,</span>
 								<br/>
-								<span>That heart may feel, hand act, mouth shew Thy praise;</span>
+								<span>That heart may feel, hand act, mouth show Thy praise;</span>
 								<br/>
 								<span>Thai when they meet, who love, and when they part,</span>
 								<br/>
