--- a/src/epub/text/scene-26.xhtml
+++ b/src/epub/text/scene-26.xhtml
@@ -694,7 +694,7 @@
 						<td epub:type="z3998:persona">Festus</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>Shew him in.</span>
+								<span>Show him in.</span>
 								<br/>
 								<span>What have you there?</span>
 							</p>
@@ -1271,7 +1271,7 @@
 						<td epub:type="z3998:persona">Festus</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>The might and truth of hearts is never shewn</span>
+								<span>The might and truth of hearts is never shown</span>
 								<br/>
 								<span>But in loving those whom we ought not to love⁠—</span>
 								<br/>
