--- a/src/epub/text/scene-28.xhtml
+++ b/src/epub/text/scene-28.xhtml
@@ -39,7 +39,7 @@
 									<br/>
 									<span>When, like a drop of water, greatened bright</span>
 									<br/>
-									<span>Into a shadow, it shall shew itself</span>
+									<span>Into a shadow, it shall show itself</span>
 									<br/>
 									<span>With all its little tyrannous things and deeds,</span>
 									<br/>
