--- a/src/epub/text/scene-3.xhtml
+++ b/src/epub/text/scene-3.xhtml
@@ -563,7 +563,7 @@
 								<br/>
 								<span>Destruction’s quiet and equality.</span>
 								<br/>
-								<span>Night brings out stars as sorrow shews as truths:</span>
+								<span>Night brings out stars as sorrow shows as truths:</span>
 								<br/>
 								<span>Though many, yet they help not; bright, they light not.</span>
 								<br/>
@@ -825,7 +825,7 @@
 								<br/>
 								<span>Another time and she shall speak with thee⁠—</span>
 								<br/>
-								<span>Ere long⁠—and she shall shew thee where she dwells,</span>
+								<span>Ere long⁠—and she shall show thee where she dwells,</span>
 								<br/>
 								<span>And how doth pass her immortality;⁠—</span>
 								<br/>
@@ -1171,7 +1171,7 @@
 								<br/>
 								<span>There was no discord⁠—it was music ceased⁠—</span>
 								<br/>
-								<span>Life’s thrilling, bounding, bursting joy. She sate</span>
+								<span>Life’s thrilling, bounding, bursting joy. She sat</span>
 								<br/>
 								<span>Like a house-god, her hands fixed on her knee;</span>
 								<br/>
