--- a/src/epub/text/scene-30.xhtml
+++ b/src/epub/text/scene-30.xhtml
@@ -98,7 +98,7 @@
 								<br/>
 								<span>Ye seem to have thought earth but a ball for kings</span>
 								<br/>
-								<span>To play with: rolling the royal bawble, empire,</span>
+								<span>To play with: rolling the royal bauble, empire,</span>
 								<br/>
 								<span>Now east⁠—now west. Your hour and power is past.</span>
 								<br/>
@@ -438,7 +438,7 @@
 								<br/>
 								<span>Who spurn at this world’s pleasures, lie to God;</span>
 								<br/>
-								<span>And shew they are not worthy of the next.</span>
+								<span>And show they are not worthy of the next.</span>
 								<br/>
 								<span>What are Thy joys we know not⁠—nor can we</span>
 								<br/>
