--- a/src/epub/text/scene-33.xhtml
+++ b/src/epub/text/scene-33.xhtml
@@ -249,7 +249,7 @@
 						<td epub:type="z3998:persona">Jove</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>Before the Christian cross and Moslem mosque</span>
+								<span>Before the Christian cross and Muslim mosque</span>
 								<br/>
 								<span>My marble fanes have fallen, and my shrines</span>
 								<br/>
