--- a/src/epub/text/scene-34.xhtml
+++ b/src/epub/text/scene-34.xhtml
@@ -145,7 +145,7 @@
 								<br/>
 								<span>Who rose, and it was morn;⁠—who stretched his wing,</span>
 								<br/>
-								<span>And stepped from star to star;⁠—so changed he shewed</span>
+								<span>And stepped from star to star;⁠—so changed he showed</span>
 								<br/>
 								<span>Most like a shadowy meteor, thorough which</span>
 								<br/>
@@ -297,7 +297,7 @@
 								<br/>
 								<span>Stood as the stars o’er thunder. God the Son</span>
 								<br/>
-								<span>Sate in His orbèd car, and breathed on them;</span>
+								<span>Sat in His orbèd car, and breathed on them;</span>
 								<br/>
 								<span>And they were rolled up like the desert sands</span>
 								<br/>
