--- a/src/epub/text/scene-36.xhtml
+++ b/src/epub/text/scene-36.xhtml
@@ -71,7 +71,7 @@
 							<p>
 								<span>Nay; immortality is long enough,</span>
 								<br/>
-								<span>As life, or as a moment is, to shew</span>
+								<span>As life, or as a moment is, to show</span>
 								<br/>
 								<span>Thy love of good, thy thanks to me and God.</span>
 								<br/>
