--- a/src/epub/text/scene-7.xhtml
+++ b/src/epub/text/scene-7.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction z3998:drama">
 		<section id="scene-7" epub:type="chapter z3998:scene">
 			<h2 epub:type="ordinal z3998:roman">VII</h2>
-			<p>Scene⁠—A country town⁠—Market-place⁠—Noon.</p>
+			<p>Scene⁠—A country town⁠—Marketplace⁠—Noon.</p>
 			<table>
 				<tbody>
 					<tr>
@@ -293,7 +293,7 @@
 								<br/>
 								<span>Give then the dead their due; it is they who saved us.</span>
 								<br/>
-								<span>The rapid and the deep⁠—the fall, the gulph</span>
+								<span>The rapid and the deep⁠—the fall, the gulf</span>
 								<br/>
 								<span>Have likenesses in feeling and in life.</span>
 								<br/>
@@ -1324,7 +1324,7 @@
 								<br/>
 								<span>Take place, if practicable, in the fitness</span>
 								<br/>
-								<span>And fulness of Thy time. And we beseech Thee,</span>
+								<span>And fullness of Thy time. And we beseech Thee,</span>
 								<br/>
 								<span>That Truth no more be gagged, nor conscience dungeoned,</span>
 								<br/>
