--- a/src/epub/text/scene-9.xhtml
+++ b/src/epub/text/scene-9.xhtml
@@ -706,7 +706,7 @@
 									<br/>
 									<span class="i1">Whare my luve and I mak seat:</span>
 									<br/>
-									<span>And I teaze her till she rins, and then</span>
+									<span>And I tease her till she rins, and then</span>
 									<br/>
 									<span class="i1">I catch her roun’ the tree;</span>
 									<br/>
@@ -1033,7 +1033,7 @@
 								<br/>
 								<span>Is all for comfort and no more for glory⁠—</span>
 								<br/>
-								<span>The nobler and more marvellous it shews.</span>
+								<span>The nobler and more marvellous it shows.</span>
 								<br/>
 								<span>Trifles like these make up the present time;</span>
 								<br/>
